--- a/webServer/views/usercenter.html
+++ b/webServer/views/usercenter.html
@@ -112,8 +112,8 @@
 				
 				.ii {
 					/*display: none;*/
-					background: red;
-					/*background-image: url("/images/face.png");*/
+					/*background: red;*/
+					background-image: url("/images/face.png");
 					width: 20px;
 					height: 20px;
 					top: -8px;
