--- a/webServer/views/usercenter.html
+++ b/webServer/views/usercenter.html
@@ -112,8 +112,7 @@
 				
 				.ii {
 					/*display: none;*/
-					/*background: red;*/
-					background-image: url("/images/face.png");
+					src: "/images/face.png";
 					width: 20px;
 					height: 20px;
 					top: -8px;
@@ -143,7 +142,7 @@
 						<div class="col-lg-3 col-md-3 col-sm-3 col-xs-3" style="height: 100px;padding-right: 0;">
 							<div style="width: 80px;height: 80px;margin-top: 10px;margin-left: -20px;position: relative;">
 								<img src="<%=icon%>" style="width: 100%;height: 100%;">
-								<span id="msgNum" class="ii"></span>
+								<img id="msgNum" class="ii">
 							</div>
 
 						</div>
