--- a/webServer/views/usercenter.html
+++ b/webServer/views/usercenter.html
@@ -112,7 +112,7 @@
 				
 				.ii {
 					/*display: none;*/
-					src: "/images/face.png";
+					src: "../public/images/face.png";
 					width: 20px;
 					height: 20px;
 					top: -8px;
