--- a/webServer/views/usercenter.html
+++ b/webServer/views/usercenter.html
@@ -112,7 +112,6 @@
 				
 				.ii {
 					/*display: none;*/
-					src: "../public/images/face.png";
 					width: 20px;
 					height: 20px;
 					top: -8px;
@@ -142,7 +141,7 @@
 						<div class="col-lg-3 col-md-3 col-sm-3 col-xs-3" style="height: 100px;padding-right: 0;">
 							<div style="width: 80px;height: 80px;margin-top: 10px;margin-left: -20px;position: relative;">
 								<img src="<%=icon%>" style="width: 100%;height: 100%;">
-								<img id="msgNum" class="ii">
+								<img id="msgNum" class="ii" src="../public/images/face.png">
 							</div>
 
 						</div>
