--- a/webServer/views/mgrCenter.html
+++ b/webServer/views/mgrCenter.html
@@ -126,7 +126,7 @@
 						</div>
 						<div class="mui-content-padded">
 							<div class="mui-text-center mui-mt15 small">
-								<form id="enterFaceDetectPageForm" action="/users/adminFaceDetect" method="get">
+								<form id="enterFaceDetectPageForm" action="/identity/adminFaceDetect" method="get">
 									<a onclick="enterFaceDetectPage()"><strong style="color: #FF6347;">进入验证界面</strong></a>
 								</form>
 							</div>
