--- a/webServer/views/mgrFaceDetect.html
+++ b/webServer/views/mgrFaceDetect.html
@@ -116,7 +116,7 @@
 					<div class="js-sendcode">
 						<div class="mui-input-group mui-mt15">
 							<div class="mui-input-row">
-								<label id="fileLabel" style="color: #868686;position: absolute;width: 100%;">请选择需要验证的视频</label>
+								<label id="fileLabel" style="color: #868686;position: absolute;width: 100%;">点击开始拍照</label>
 								<input type="file" id="myfile" name="myfile" style="width: 100%;opacity: 0;" accept="image/*" capture="camera"/>
 							</div>
 						</div>
