--- a/webServer/views/faceDetect.html
+++ b/webServer/views/faceDetect.html
@@ -61,7 +61,7 @@
 				}
 				sendRequest(faceDt);
 			}
-			
+
 			function enterUserCenter() {
 				document.getElementById("backUserCenterForm").submit();
 			}
@@ -117,7 +117,8 @@
 						<div class="mui-input-group mui-mt15">
 							<div class="mui-input-row">
 								<label id="fileLabel" style="color: #868686;position: absolute;width: 100%;">请选择需要识别的视频</label>
-								<input type="file" id="myfile" name="myfile" style="width: 100%;opacity: 0;" accept="video/*" capture="camera"/>
+								<!--<input type="file" id="myfile" name="myfile" style="width: 100%;opacity: 0;" accept="video/*" capture="camera" />-->
+								<input type="file" id="myfile" name="myfile" style="width: 100%;opacity: 0;" accept="image/*" capture="camera" />
 							</div>
 						</div>
 
