remove face detect

--- a/webServer/views/usercenter.html
+++ b/webServer/views/usercenter.html
@@ -158,13 +158,13 @@
 						<span style="font-size: 10px;" id="currentTime"></span>
 					</div>
 				</div>
-				<div class="mui-text-center" style="margin: 0 15px; margin-top: 10px;">
+				<!--<div class="mui-text-center" style="margin: 0 15px; margin-top: 10px;">
 					<form id="faceDetectForm" action="/identity/faceDetect" method="get">
 						<button class="mui-btn mui-btn-success mui-btn-block log-in" onclick="enterFaceDetect()" style="background-color: #FF4040;border:0;width: 100%;">
                    		人脸识别
                 			</button>
 					</form>
-				</div>
+				</div>-->
 				<div>
 
 				</div>
