--- a/webServer/views/active.html
+++ b/webServer/views/active.html
@@ -104,8 +104,8 @@
 		<div class="container container-fill">
 			<div class="mui-content mc-login">
 				<div class="avatar mui-text-center">
-					<h1 class="fs_login_h1" style="color:#FF4040">会员激活<br>
-            <small style="color:#FF6347">Log&nbsp; in</small>
+					<h1 class="fs_login_h1" style="color:#1A1A1A">会员激活<br>
+            <small style="color:#242424">Log&nbsp; in</small>
         </h1>
 				</div>
 				<div class="mui-active mc-login-code" id="login-code">
@@ -117,16 +117,16 @@
 						</div>
 
 						<div class="mui-text-center" style="margin-top:25px ">
-							<button id="confirmBtn" class="mui-btn mui-btn-success mui-btn-block log-in" onclick="confirmActive()" style="background-color: #FF4040;border:0;">激活</button>
+							<button id="confirmBtn" class="mui-btn mui-btn-success mui-btn-block log-in" onclick="confirmActive()" style="background-color: #1A1A1A;border:0;">激活</button>
 						</div>
 					</div>
 				</div>
 				<div class="mui-content-padded">
 					<div class="mui-text-center mui-mt15 small">
-							<strong style="color: #FF6347;"> * 门店员工会为您提供激活码 * </strong>
+							<strong style="color: #242424;"> * 门店员工会为您提供激活码 * </strong>
 					</div>
 					<div class="mui-text-center mui-mt15 small" style="margin-top: 0 !important;">
-							<strong style="color: #FF6347;">Getting it from Whichbankers</strong>
+							<strong style="color: #242424;">Getting it from Whichbankers</strong>
 					</div>
 				</div>
 
