--- a/webServer/views/login.html
+++ b/webServer/views/login.html
@@ -186,8 +186,8 @@
 		<div class="container container-fill">
 			<div class="mui-content mc-login">
 				<div class="avatar mui-text-center">
-					<h1 class="fs_login_h1" style="color:#FF4040">会员登录<br>
-            <small style="color:#FF6347">Log&nbsp; in</small>
+					<h1 class="fs_login_h1" style="color:#1A1A1A">会员登录<br>
+            <small style="color:#242424">Log&nbsp; in</small>
         </h1>
 				</div>
 				<div class="mui-active mc-login-code" id="login-code">
@@ -212,7 +212,7 @@
 						</div>
 
 						<div class="mui-text-center" style="margin-top:25px;">
-							<button class="mui-btn mui-btn-success mui-btn-block log-in" onclick="confirmLogin()" style="background-color: #FF4040;border:0;">
+							<button class="mui-btn mui-btn-success mui-btn-block log-in" onclick="confirmLogin()" style="background-color: #1A1A1A;border:0;">
                     进入会员中心
                 </button>
 						</div>
@@ -221,7 +221,7 @@
 				<div class="mui-content-padded">
 					<div class="mui-text-center mui-mt15 small">
 						<form id="registerForm" action="/users/register" method="get">
-							<a onclick="sendRegister()"><strong style="color: #FF6347;">会员注册</strong></a>
+							<a onclick="sendRegister()"><strong style="color: #242424;">会员注册</strong></a>
 						</form>
 					</div>
 				</div>
