--- a/webServer/views/mgrCenter.html
+++ b/webServer/views/mgrCenter.html
@@ -103,8 +103,8 @@
 		<div class="container container-fill">
 			<div class="mui-content mc-login">
 				<div class="avatar mui-text-center">
-					<h1 class="fs_login_h1" style="color:#FF4040">管理员中心</br>
-            <small style="color:#FF6347">Log&nbsp; in</small>
+					<h1 class="fs_login_h1" style="color:#1A1A1A">管理员中心</br>
+            <small style="color:#242424">Log&nbsp; in</small>
         </h1>
 				</div>
 				<div class="mui-active mc-login-code" id="login-code">
@@ -120,14 +120,14 @@
 							</div>
 						</div>
 						<div class="mui-text-center" style="margin-top:25px ">
-							<button id="createBtn" class="mui-btn mui-btn-success mui-btn-block log-in" onclick="confirmCreate()" style="background-color: #FF4040;border:0;">
+							<button id="createBtn" class="mui-btn mui-btn-success mui-btn-block log-in" onclick="confirmCreate()" style="background-color: #1A1A1A;border:0;">
                     获取激活码
                 </button>
 						</div>
 						<div class="mui-content-padded">
 							<div class="mui-text-center mui-mt15 small">
 								<form id="enterFaceDetectPageForm" action="/identity/adminFaceDetect" method="get">
-									<a onclick="enterFaceDetectPage()"><strong style="color: #FF6347;">进入验证界面</strong></a>
+									<a onclick="enterFaceDetectPage()"><strong style="color: #242424;">进入验证界面</strong></a>
 								</form>
 							</div>
 						</div>
