--- a/webServer/views/mgrFaceDetect.html
+++ b/webServer/views/mgrFaceDetect.html
@@ -108,8 +108,8 @@
 		<div class="container container-fill">
 			<div class="mui-content mc-login">
 				<div class="avatar mui-text-center">
-					<h1 class="fs_login_h1" style="color:#FF4040">人脸验证<br>
-            <small style="color:#FF6347">Face&nbsp; Identity</small>
+					<h1 class="fs_login_h1" style="color:#1A1A1A">人脸验证<br>
+            <small style="color:#242424">Face&nbsp; Identity</small>
         </h1>
 				</div>
 				<div class="mui-active mc-login-code" id="login-code">
@@ -122,12 +122,12 @@
 						</div>
 
 						<div class="mui-text-center" style="margin-top:25px ">
-							<button class="mui-btn mui-btn-success mui-btn-block log-in" onclick="startConfirm()" style="background-color: #FF4040;border:0;">开始验证</button>
+							<button class="mui-btn mui-btn-success mui-btn-block log-in" onclick="startConfirm()" style="background-color: #1A1A1A;border:0;">开始验证</button>
 						</div>
 						<div class="mui-content-padded">
 							<div class="mui-text-center mui-mt15 small">
 								<form id="enterActivePageForm" action="/users/adminCenter" method="get">
-									<a onclick="enterActivePage()"><strong style="color: #FF6347;">返回激活页面</strong></a>
+									<a onclick="enterActivePage()"><strong style="color: #242424;">返回激活页面</strong></a>
 								</form>
 							</div>
 						</div>
