--- a/webServer/views/register.html
+++ b/webServer/views/register.html
@@ -37,8 +37,8 @@
 
 			<div class="mui-content mc-login">
 				<div class="avatar mui-text-center">
-					<h1 class="fs_login_h1" style="color: #FF4040">微尺伴客会员卡注册<br>
-            <small style="color : #FF6347">WHICHBANKS EXECUTIVE MEMBERSHIP REGISTRATION</small>
+					<h1 class="fs_login_h1" style="color: #1A1A1A">微尺伴客会员卡注册<br>
+            <small style="color : #242424">WHICHBANKS EXECUTIVE MEMBERSHIP REGISTRATION</small>
         </h1>
 				</div>
 				<div class="mc-login-code" id="register-code">
@@ -89,8 +89,8 @@
 						</div>
 
 						<div class="mui-mt15 mui-text-center">
-							<p class="mui-text-muted mui-mb15 small">确认注册前，请详细阅读 <span style="color: #FF6347">《会员细则》</span></p>
-							<button class="mui-btn mui-btn-success mui-btn-block sign-up" onclick="confirmRegister()" style="background-color: #FF4040;border: 0;">确认注册</button>
+							<p class="mui-text-muted mui-mb15 small">确认注册前，请详细阅读 <span style="color: #242424">《会员细则》</span></p>
+							<button class="mui-btn mui-btn-success mui-btn-block sign-up" onclick="confirmRegister()" style="background-color: #1A1A1A;border: 0;">确认注册</button>
 						</div>
 
 					</div>
