--- a/webServer/views/faceDetect.html
+++ b/webServer/views/faceDetect.html
@@ -108,8 +108,8 @@
 		<div class="container container-fill">
 			<div class="mui-content mc-login">
 				<div class="avatar mui-text-center">
-					<h1 class="fs_login_h1" style="color:#FF4040">人脸识别<br>
-            <small style="color:#FF6347">Face&nbsp; Detect</small>
+					<h1 class="fs_login_h1" style="color:#1A1A1A">人脸识别<br>
+            <small style="color:#242424">Face&nbsp; Detect</small>
         </h1>
 				</div>
 				<div class="mui-active mc-login-code" id="login-code">
@@ -123,12 +123,12 @@
 						</div>
 
 						<div class="mui-text-center" style="margin-top:25px ">
-							<button class="mui-btn mui-btn-success mui-btn-block log-in" onclick="inputFaceData()" style="background-color: #FF4040;border:0;">开始识别</button>
+							<button class="mui-btn mui-btn-success mui-btn-block log-in" onclick="inputFaceData()" style="background-color: #1A1A1A;border:0;">开始识别</button>
 						</div>
 						<div class="mui-content-padded">
 							<div class="mui-text-center mui-mt15 small">
 								<form id="backUserCenterForm" action="/users/usercenter" method="get">
-									<a onclick="enterUserCenter()"><strong style="color: #FF6347;">返回用户中心</strong></a>
+									<a onclick="enterUserCenter()"><strong style="color: #242424;">返回用户中心</strong></a>
 								</form>
 							</div>
 						</div>
