--- a/webServer/views/import.html
+++ b/webServer/views/import.html
@@ -111,8 +111,8 @@
 		<div class="container container-fill">
 			<div class="mui-content mc-login">
 				<div class="avatar mui-text-center">
-					<h1 class="fs_login_h1" style="color:#FF4040">会员导入<br>
-            <small style="color:#FF6347">Log&nbsp; in</small>
+					<h1 class="fs_login_h1" style="color:#1A1A1A">会员导入<br>
+            <small style="color:#242424">Log&nbsp; in</small>
         </h1>
 				</div>
 				<div class="mui-active mc-login-code" id="login-code">
@@ -128,7 +128,7 @@
 						</div>
 
 						<div class="mui-text-center" style="margin-top:25px ">
-							<button class="mui-btn mui-btn-success mui-btn-block log-in" onclick="confirmImport()" style="background-color: #FF4040;border:0;">开始导入</button>
+							<button class="mui-btn mui-btn-success mui-btn-block log-in" onclick="confirmImport()" style="background-color: #1A1A1A;border:0;">开始导入</button>
 						</div>
 					</div>
 				</div>
