--- a/webServer/views/mgrLogin.html
+++ b/webServer/views/mgrLogin.html
@@ -119,8 +119,8 @@
 		<div class="container container-fill">
 			<div class="mui-content mc-login">
 				<div class="avatar mui-text-center">
-					<h1 class="fs_login_h1" style="color:#FF4040">管理员登录<br>
-            <small style="color:#FF6347">Log&nbsp; in</small>
+					<h1 class="fs_login_h1" style="color:#1A1A1A">管理员登录<br>
+            <small style="color:#242424">Log&nbsp; in</small>
         </h1>
 				</div>
 				<div class="mui-active mc-login-code" id="login-code">
@@ -137,7 +137,7 @@
 						</div>
 
 						<div class="mui-text-center" style="margin-top:25px ">
-							<button class="mui-btn mui-btn-success mui-btn-block log-in" onclick="confirmLogin()" style="background-color: #FF4040;border:0;">
+							<button class="mui-btn mui-btn-success mui-btn-block log-in" onclick="confirmLogin()" style="background-color: #1A1A1A;border:0;">
                     登录
                 </button>
 						</div>
