--- a/webServer/views/usercenter.html
+++ b/webServer/views/usercenter.html
@@ -126,15 +126,15 @@
 
 			<div class="mui-content mc-login" style="padding-bottom: 15px;">
 				<div class="avatar mui-text-center">
-					<h1 class="fs_login_h1" style="color:#FF4040">会员中心<br><small style="color:#FF6347">The&nbsp; Member&nbsp; Center</small></h1>
+					<h1 class="fs_login_h1" style="color:#1A1A1A">会员中心<br><small style="color:#242424">The&nbsp; Member&nbsp; Center</small></h1>
 				</div>
 				<div class="panles" style="height: 120px;">
 					<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="padding: 0;">
 						<div class="col-lg-9 col-md-9 col-sm-9 col-xs-9" style="height: 100px;">
-							<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6" style="margin-top: 10px;color: #FF6347;padding: 0;">
+							<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6" style="margin-top: 10px;color: #242424;padding: 0;">
 								<%=username%>
 							</div>
-							<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6" style="margin-top: 10px;color: #FF6347;padding: 0;"></div>
+							<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6" style="margin-top: 10px;color: #242424;padding: 0;"></div>
 							<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="margin-top: 10px;padding: 0;"><span>积分会员</span></div>
 							<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="margin-top: 10px;padding: 0;"><span><%=phone%></span></div>
 						</div>
