--- a/webServer/views/register.html
+++ b/webServer/views/register.html
@@ -37,8 +37,8 @@
 
 			<div class="mui-content mc-login">
 				<div class="avatar mui-text-center">
-					<h1 class="fs_login_h1" style="color: #1A1A1A">微尺伴客会员卡注册<br>
-            <small style="color : #242424">WHICHBANKS EXECUTIVE MEMBERSHIP REGISTRATION</small>
+					<h1 class="fs_login_h1" style="color: #1A1A1A">会员卡注册<br>
+            <small style="color : #242424">EXECUTIVE MEMBERSHIP REGISTRATION</small>
         </h1>
 				</div>
 				<div class="mc-login-code" id="register-code">
