--- a/webServer/views/active.html
+++ b/webServer/views/active.html
@@ -125,9 +125,9 @@
 					<div class="mui-text-center mui-mt15 small">
 							<strong style="color: #242424;"> * 门店员工会为您提供激活码 * </strong>
 					</div>
-					<div class="mui-text-center mui-mt15 small" style="margin-top: 0 !important;">
-							<strong style="color: #242424;">Getting it from Whichbankers</strong>
-					</div>
+					<!--<div class="mui-text-center mui-mt15 small" style="margin-top: 0 !important;">-->
+							<!--<strong style="color: #242424;">Getting it from Whichbankers</strong>-->
+					<!--</div>-->
 				</div>
 
 				<!--<div class="mui-active mc-login-code" id="login-code">
