change admin center

--- a/webServer/views/mgrCenter.html
+++ b/webServer/views/mgrCenter.html
@@ -124,13 +124,13 @@
                     获取激活码
                 </button>
 						</div>
-						<div class="mui-content-padded">
+						<!--<div class="mui-content-padded">
 							<div class="mui-text-center mui-mt15 small">
 								<form id="enterFaceDetectPageForm" action="/identity/adminFaceDetect" method="get">
 									<a onclick="enterFaceDetectPage()"><strong style="color: #242424;">进入验证界面</strong></a>
 								</form>
 							</div>
-						</div>
+						</div>-->
 					</div>
 				</div>
 			</div>
