--- a/webServer/views/error.html
+++ b/webServer/views/error.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 		<!--[if IE]><meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"><![endif]-->
-		<title>加入我们</title>
+		<title>错误</title>
 		
 	</head>
 
