--- a/webServer/views/usercenter.html
+++ b/webServer/views/usercenter.html
@@ -14,9 +14,9 @@
 		<script type="text/javascript" src="/javascripts/util.js"></script>
 
 		<!--<script src="http://libs.cncdn.cn/jsbarcode/3.5.8/barcodes/JsBarcode.codabar.min.js"></script>-->
-		<script type="text/javascript" src="http://wechat.fangsuo.com/app/resource/js/lib/jquery-1.11.1.min.js?v=20160906"></script>
+		<!--<script type="text/javascript" src="http://wechat.fangsuo.com/app/resource/js/lib/jquery-1.11.1.min.js?v=20160906"></script>
 		<script type="text/javascript" src="http://wechat.fangsuo.com/app/resource/js/lib/mui.min.js?v=20160906"></script>
-		<script type="text/javascript" src="http://wechat.fangsuo.com/app/resource/js/app/common.js?v=20160906"></script>
+		<script type="text/javascript" src="http://wechat.fangsuo.com/app/resource/js/app/common.js?v=20160906"></script>-->
 
 		<script src="/javascripts/jquery-1.10.2.min.js"></script>
 		<script type="text/javascript" src="/javascripts/jquery.qrcode.min.js"></script>
@@ -26,9 +26,10 @@
 		<script src="/javascripts/jquery.classycountdown.js"></script>
 
 		<link rel="stylesheet" type="text/css" href="/stylesheets/jquery.classycountdown.css" />
-
-		<link href="http://wechat.fangsuo.com/app/resource/css/bootstrap.min.css?v=20160906" rel="stylesheet">
-		<link href="http://wechat.fangsuo.com/app/resource/css/common.min.css?v=20160906" rel="stylesheet">
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+		<!--<link href="http://wechat.fangsuo.com/app/resource/css/bootstrap.min.css?v=20160906" rel="stylesheet">
+		<link href="http://wechat.fangsuo.com/app/resource/css/common.min.css?v=20160906" rel="stylesheet">-->
+		<link href="">
 		<link href="http://libs.baidu.com/fontawesome/4.0.3/css/font-awesome.min.css" rel="stylesheet">
 		<script type="text/javascript">
 			if(navigator.appName == 'Microsoft Internet Explorer') {
@@ -39,16 +40,16 @@
 		</script>
 	</head>
 
-	<body>
+	<body style="background-color: #FAFAFA;">
 		<div class="container container-fill">
-			<link href="http://wechat.fangsuo.com/addons/fangsuo/assets/css/fangsuo_v2.css?v=17070301" rel="stylesheet">
+			<!--<link href="http://wechat.fangsuo.com/addons/fangsuo/assets/css/fangsuo_v2.css?v=17070301" rel="stylesheet">-->
 			<!--link href="http://wechat.fangsuo.net/addons/fangsuo/assets/css/fangsuo_v2.css" rel="stylesheet"-->
 
 			<style type="text/css">
 				.panles {
 					padding: 10px;
 					position: relative;
-					background: #FFF;
+					background: #FFFFFF;
 					border-radius: 8px;
 					margin: 0 15px;
 					margin-bottom: 10px;
@@ -89,7 +90,7 @@
 				
 				.list-01 li {
 					padding-left: 18px;
-					background-image: url("http://wechat.fangsuo.com/addons/fangsuo/assets/images/ico-li-01.png");
+					/*background-image: url("http://wechat.fangsuo.com/addons/fangsuo/assets/images/ico-li-01.png");*/
 					background-repeat: no-repeat;
 					background-position: 1px 10px;
 					background-size: 9px auto;
@@ -126,7 +127,7 @@
 
 			<div class="mui-content mc-login" style="padding-bottom: 15px;">
 				<div class="avatar mui-text-center">
-					<h1 class="fs_login_h1" style="color:#1A1A1A">会员中心<br><small style="color:#242424">The&nbsp; Member&nbsp; Center</small></h1>
+					<h1 style="color:#1A1A1A;font-size:24px;text-align:center">会员中心<br><small style="color:#242424;font-size: 14px;">The&nbsp; Member&nbsp; Center</small></h1>
 				</div>
 				<div class="panles" style="height: 120px;">
 					<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="padding: 0;">
