--- a/webServer/views/register.html
+++ b/webServer/views/register.html
@@ -13,13 +13,17 @@
 		<script src="http://res.wx.qq.com/open/js/jweixin-1.1.0.js"></script>
 		<script type="text/javascript" src="/javascripts/util.js"></script>
 		<script src="/javascripts/require.js"></script>
-		<script type="text/javascript" src="http://wechat.fangsuo.com/app/resource/js/lib/jquery-1.11.1.min.js?v=20160906"></script>
-		<script type="text/javascript" src="http://wechat.fangsuo.com/app/resource/js/lib/mui.min.js?v=20160906"></script>
-		<script type="text/javascript" src="http://wechat.fangsuo.com/app/resource/js/app/common.js?v=20160906"></script>
-		<link href="http://wechat.fangsuo.com/app/resource/css/bootstrap.min.css?v=20160906" rel="stylesheet">
-		<link href="http://wechat.fangsuo.com/app/resource/css/common.min.css?v=20160906" rel="stylesheet">
-		<link href="http://wechat.fangsuo.com/addons/fangsuo/assets/css/fangsuo_v2.css" rel="stylesheet">
-		<link href="http://wechat.fangsuo.com/addons/fangsuo/assets/css/icons-extra.css" rel="stylesheet">
+		<!--script type="text/javascript" src="http://wechat.fangsuo.com/app/resource/js/lib/jquery-1.11.1.min.js?v=20160906"></script-->
+		<script type="text/javascript" src="/javascripts/jquery-1.10.2.min.js"></script>
+		<!--script type="text/javascript" src="http://wechat.fangsuo.com/app/resource/js/lib/mui.min.js?v=20160906"></script-->
+		<script type="text/javascript" src="/javascripts/mui.min.js"></script>
+		<!--script type="text/javascript" src="http://wechat.fangsuo.com/app/resource/js/app/common.js?v=20160906"></script-->
+		<link href="/stylesheets/bootstrap.min.css" rel="stylesheet"/>
+		<!--link href="http://wechat.fangsuo.com/app/resource/css/bootstrap.min.css?v=20160906" rel="stylesheet"-->
+		<!--link href="http://wechat.fangsuo.com/app/resource/css/common.min.css?v=20160906" rel="stylesheet"-->
+		<!--link href="http://wechat.fangsuo.com/addons/fangsuo/assets/css/fangsuo_v2.css" rel="stylesheet"-->
+		<!--link href="http://wechat.fangsuo.com/addons/fangsuo/assets/css/icons-extra.css" rel="stylesheet"-->
+		<link href="/stylesheets/mui.min.css" rel="stylesheet">
 		<link href="http://libs.baidu.com/fontawesome/4.0.3/css/font-awesome.min.css" rel="stylesheet">
 		<link href="/stylesheets/mui.picker.min.css" rel="stylesheet" />
 		<script src="/javascripts/mui.picker.min.js"></script>
@@ -52,7 +56,7 @@
 							<input name="code" class="vercode en" type="text" placeholder="验证码">
 							<div class="getcode">
 								<div class="js-timer">
-									<button class="mui-btn js-check-mobile" onclick="sendCode()">获取验证码</button>
+									<button class="mui-btn js-check-mobile" style="width:30%" onclick="sendCode()">获取验证码</button>
 								</div>
 							</div>
 						</div>
