--- a/webServer/views/usercenter.html
+++ b/webServer/views/usercenter.html
@@ -14,9 +14,10 @@
 		<script type="text/javascript" src="/javascripts/util.js"></script>
 
 		<!--<script src="http://libs.cncdn.cn/jsbarcode/3.5.8/barcodes/JsBarcode.codabar.min.js"></script>-->
-		<script type="text/javascript" src="http://wechat.fangsuo.com/app/resource/js/lib/jquery-1.11.1.min.js?v=20160906"></script>
-		<script type="text/javascript" src="http://wechat.fangsuo.com/app/resource/js/lib/mui.min.js?v=20160906"></script>
-		<script type="text/javascript" src="http://wechat.fangsuo.com/app/resource/js/app/common.js?v=20160906"></script>
+		<!--script type="text/javascript" src="http://wechat.fangsuo.com/app/resource/js/lib/jquery-1.11.1.min.js?v=20160906"></script-->
+		<script type="text/javascript" src="/javascripts/mui.min.js"></script>
+		<!--script type="text/javascript" src="http://wechat.fangsuo.com/app/resource/js/lib/mui.min.js?v=20160906"></script-->
+		<!--script type="text/javascript" src="http://wechat.fangsuo.com/app/resource/js/app/common.js?v=20160906"></script-->
 
 		<script src="/javascripts/jquery-1.10.2.min.js"></script>
 		<script type="text/javascript" src="/javascripts/jquery.qrcode.min.js"></script>
@@ -26,9 +27,10 @@
 		<script src="/javascripts/jquery.classycountdown.js"></script>
 
 		<link rel="stylesheet" type="text/css" href="/stylesheets/jquery.classycountdown.css" />
-
-		<link href="http://wechat.fangsuo.com/app/resource/css/bootstrap.min.css?v=20160906" rel="stylesheet">
-		<link href="http://wechat.fangsuo.com/app/resource/css/common.min.css?v=20160906" rel="stylesheet">
+		<link href="/stylesheets/bootstrap.min.css" rel="stylesheet"/>
+		<!--link href="http://wechat.fangsuo.com/app/resource/css/bootstrap.min.css?v=20160906" rel="stylesheet"-->
+		<!--link href="http://wechat.fangsuo.com/app/resource/css/common.min.css?v=20160906" rel="stylesheet"-->
+		<link href="/stylesheets/mui.min.css" rel="stylesheet">
 		<link href="http://libs.baidu.com/fontawesome/4.0.3/css/font-awesome.min.css" rel="stylesheet">
 		<script type="text/javascript">
 			if(navigator.appName == 'Microsoft Internet Explorer') {
@@ -41,7 +43,7 @@
 
 	<body>
 		<div class="container container-fill">
-			<link href="http://wechat.fangsuo.com/addons/fangsuo/assets/css/fangsuo_v2.css?v=17070301" rel="stylesheet">
+			<!--link href="http://wechat.fangsuo.com/addons/fangsuo/assets/css/fangsuo_v2.css?v=17070301" rel="stylesheet"-->
 			<!--link href="http://wechat.fangsuo.net/addons/fangsuo/assets/css/fangsuo_v2.css" rel="stylesheet"-->
 
 			<style type="text/css">
@@ -89,10 +91,10 @@
 				
 				.list-01 li {
 					padding-left: 18px;
-					background-image: url("http://wechat.fangsuo.com/addons/fangsuo/assets/images/ico-li-01.png");
+					/*background-image: url("http://wechat.fangsuo.com/addons/fangsuo/assets/images/ico-li-01.png");
 					background-repeat: no-repeat;
 					background-position: 1px 10px;
-					background-size: 9px auto;
+					background-size: 9px auto;*/
 				}
 				
 				.countDownClass {
