--- a/webServer/views/active.html
+++ b/webServer/views/active.html
@@ -13,24 +13,9 @@
 		<script src="http://res.wx.qq.com/open/js/jweixin-1.1.0.js"></script>
 		<script type="text/javascript" src="/javascripts/util.js"></script>
 		<script src="/javascripts/require.js"></script>
-<<<<<<< HEAD
-		<script type="text/javascript" src="/javascripts/jquery-1.10.2.min.js"></script>
-		<!--script type="text/javascript" src="http://wechat.fangsuo.com/app/resource/js/lib/jquery-1.11.1.min.js?v=20160906">--</script-->
-		<script type="text/javascript" src="/javascripts/mui.min.js"></script>
-		<!--script type="text/javascript" src="http://wechat.fangsuo.com/app/resource/js/lib/mui.min.js?v=20160906"></script-->
-		<!--script type="text/javascript" src="http://wechat.fangsuo.com/app/resource/js/app/common.js?v=20160906"></script-->
-		<link href="/stylesheets/bootstrap.min.css" rel="stylesheet"/>
-		<!--link href="http://wechat.fangsuo.com/app/resource/css/bootstrap.min.css?v=20160906" rel="stylesheet"-->
-		<!--link href="http://wechat.fangsuo.com/app/resource/css/common.min.css?v=20160906" rel="stylesheet"-->
-=======
-		<!--<script type="text/javascript" src="http://wechat.fangsuo.com/app/resource/js/lib/jquery-1.11.1.min.js?v=20160906"></script>
-		<script type="text/javascript" src="http://wechat.fangsuo.com/app/resource/js/lib/mui.min.js?v=20160906"></script>
-		<script type="text/javascript" src="http://wechat.fangsuo.com/app/resource/js/app/common.js?v=20160906"></script>
-		<link href="http://wechat.fangsuo.com/app/resource/css/bootstrap.min.css?v=20160906" rel="stylesheet">
-		<link href="http://wechat.fangsuo.com/app/resource/css/common.min.css?v=20160906" rel="stylesheet">-->
->>>>>>> origin/master
+		<script src="/javascripts/jquery-1.10.2.min.js"></script>
+		<link rel="stylesheet" type="text/css" href="/stylesheets/style.css" />
 		<link href="http://libs.baidu.com/fontawesome/4.0.3/css/font-awesome.min.css" rel="stylesheet">
-		<link href="/stylesheets/mui.min.css" rel="stylesheet">
 		<script type="text/javascript">
 			if(navigator.appName == 'Microsoft Internet Explorer') {
 				if(navigator.userAgent.indexOf("MSIE 5.0") > 0 || navigator.userAgent.indexOf("MSIE 6.0") > 0 || navigator.userAgent.indexOf("MSIE 7.0") > 0) {
@@ -38,26 +23,13 @@
 				}
 			}
 		</script>
-<<<<<<< HEAD
-		<!--link href="http://wechat.fangsuo.com/addons/fangsuo/assets/css/fangsuo_v2.css?v=17051201" rel="stylesheet"-->
-=======
-		<!--<link href="http://wechat.fangsuo.com/addons/fangsuo/assets/css/fangsuo_v2.css?v=17051201" rel="stylesheet">-->
->>>>>>> origin/master
-		<style>
-			.f-heiti {
-				letter-spacing: 1px;
-			}
-			
-			.mui-text-muted {
-				color: #9e9e9e
-			}
-		</style>
 		<script type="text/javascript">
 			$(function() {　　
 				// todo 
 			});
 
 			function confirmActive() {
+
 				var data = {
 					code: $('#activecode').val()
 				};
@@ -73,7 +45,7 @@
 					data: data,
 					successCallback: function(data) {
 						//do nothing
-						util.toast(data['message'], '');
+						alert(data['message']);
 						setTimeout(function() {
 							window.location.href = data.url;
 						}, 1000);
@@ -83,8 +55,6 @@
 			}
 
 			function sendRequest(request) {
-				var loading = $('<div class="mui-toast-container mui-active js-toast-loading"><div class="mui-toast-message"><div class="mui-toast-icon"><span class="fa fa-spinner fa-spin"></span></div>请求中</div></div>');
-				document.body.appendChild(loading[0]);
 				$.ajax({
 					type: "POST",
 					timeout: 10000,
@@ -95,21 +65,20 @@
 						console.log("res : " + res["status"]);
 						if(res['status'] != 1) {
 							$("#confirmBtn").attr("disabled", false);
-							return util.toast(res['message'], '', 'error');
+							return alert(res['message']);
 						} else {
 							request.successCallback(res);
 						}
 					},
 					error: function(XMLHttpRequest, status) {
 						if(status == 'timeout') {
-							util.toast('请求超时，请稍后再试', '', 'error');
+							alert('请求超时，请稍后再试');
 						} else {
-							util.toast('请求失败，请稍后再试', '', 'error');
+							alert('请求失败，请稍后再试');
 						}
 						$("#confirmBtn").attr("disabled", false);
 					},
 					complete: function() {
-						loading.remove()
 					}
 				});
 			}
@@ -118,54 +87,20 @@
 
 	<body>
 		<div class="container container-fill">
-			<div class="mui-content mc-login">
-				<div class="avatar mui-text-center">
-					<h1 class="fs_login_h1" style="color:#1A1A1A">会员激活<br>
-            <small style="color:#242424">Log&nbsp; in</small>
-        </h1>
-				</div>
-				<div class="mui-active mc-login-code" id="login-code">
-					<div class="js-sendcode">
-						<div class="mui-input-group mui-mt15">
-							<div class="mui-input-row">
-								<input name="activecode" id="activecode" class=" en" type="text" placeholder="请输入激活码" />
-							</div>
-						</div>
 
-						<div class="mui-text-center" style="margin-top:25px ">
-							<button id="confirmBtn" class="mui-btn mui-btn-success mui-btn-block log-in" onclick="confirmActive()" style="background-color: #1A1A1A;border:0;">激活</button>
-						</div>
-					</div>
-				</div>
-				<div class="mui-content-padded">
-					<div class="mui-text-center mui-mt15 small">
-							<strong style="color: #242424;"> * 门店员工会为您提供激活码 * </strong>
-					</div>
-					<!--<div class="mui-text-center mui-mt15 small" style="margin-top: 0 !important;">-->
-							<!--<strong style="color: #242424;">Getting it from Whichbankers</strong>-->
-					<!--</div>-->
-				</div>
+			<h1 class="common-main-title">会员激活<br><small class="common-sub-title">Member&nbsp; Active</small></h1>
 
-				<!--<div class="mui-active mc-login-code" id="login-code">
-					<div class="js-sendcode">
-						<div class="mui-input-group mui-mt15">
-							<div class="mui-input-row">
-								<div id="pay198" class="col-lg-6 col-md-6 col-sm-6 col-xs-6" style="background: white;height: 100%;text-align: center;border-style: solid;border-width: 1px;border-color: red;" onclick="clickPay(this.id)">
-									<span style="line-height: 44px;color: black;">198</span>
-								</div>
-								<div id="pay298" class="col-lg-6 col-md-6 col-sm-6 col-xs-6" style="background: white;height: 100%;text-align: center;border-style: solid;border-width: 0px;border-color: red;" onclick="clickPay(this.id)">
-									<span style="line-height: 44px;color: black;">298</span>
-								</div>
-							</div>
-						</div>
-
-						<div class="mui-text-center" style="margin-top:25px ">
-							<button class="mui-btn mui-btn-success mui-btn-block log-in" onclick="confirmBuy()" style="background-color: #FF4040;border:0;">
-                    购买
-                </button>
-						</div>
-					</div>
-				</div>-->
+			<div class="common-input-div">
+				<input class="common-input-inner" id="activecode" type="text" placeholder="请输入激活码" />
 			</div>
+
+			<div class="common-btn-div">
+				<button id="confirmBtn" class="common-btn-inner" onclick="confirmActive()"><span class="common-btn-text">激活</span></button>
+			</div>
+
+			<div class="common-footer-text">
+				<strong> * 门店员工会为您提供激活码 * </strong>
+			</div>
+
 		</div>
 	</body>
