--- a/webServer/views/usercenter.html
+++ b/webServer/views/usercenter.html
@@ -12,19 +12,6 @@
 		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 		<script src="http://res.wx.qq.com/open/js/jweixin-1.1.0.js"></script>
 		<script type="text/javascript" src="/javascripts/util.js"></script>
-
-		<!--<script src="http://libs.cncdn.cn/jsbarcode/3.5.8/barcodes/JsBarcode.codabar.min.js"></script>-->
-<<<<<<< HEAD
-		<!--script type="text/javascript" src="http://wechat.fangsuo.com/app/resource/js/lib/jquery-1.11.1.min.js?v=20160906"></script-->
-		<script type="text/javascript" src="/javascripts/mui.min.js"></script>
-		<!--script type="text/javascript" src="http://wechat.fangsuo.com/app/resource/js/lib/mui.min.js?v=20160906"></script-->
-		<!--script type="text/javascript" src="http://wechat.fangsuo.com/app/resource/js/app/common.js?v=20160906"></script-->
-=======
-		<!--<script type="text/javascript" src="http://wechat.fangsuo.com/app/resource/js/lib/jquery-1.11.1.min.js?v=20160906"></script>
-		<script type="text/javascript" src="http://wechat.fangsuo.com/app/resource/js/lib/mui.min.js?v=20160906"></script>
-		<script type="text/javascript" src="http://wechat.fangsuo.com/app/resource/js/app/common.js?v=20160906"></script>-->
->>>>>>> origin/master
-
 		<script src="/javascripts/jquery-1.10.2.min.js"></script>
 		<script type="text/javascript" src="/javascripts/jquery.qrcode.min.js"></script>
 
@@ -33,18 +20,10 @@
 		<script src="/javascripts/jquery.classycountdown.js"></script>
 
 		<link rel="stylesheet" type="text/css" href="/stylesheets/jquery.classycountdown.css" />
-<<<<<<< HEAD
-		<link href="/stylesheets/bootstrap.min.css" rel="stylesheet"/>
-		<!--link href="http://wechat.fangsuo.com/app/resource/css/bootstrap.min.css?v=20160906" rel="stylesheet"-->
-		<!--link href="http://wechat.fangsuo.com/app/resource/css/common.min.css?v=20160906" rel="stylesheet"-->
-		<link href="/stylesheets/mui.min.css" rel="stylesheet">
-=======
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-		<!--<link href="http://wechat.fangsuo.com/app/resource/css/bootstrap.min.css?v=20160906" rel="stylesheet">
-		<link href="http://wechat.fangsuo.com/app/resource/css/common.min.css?v=20160906" rel="stylesheet">-->
 		<link href="">
->>>>>>> origin/master
 		<link href="http://libs.baidu.com/fontawesome/4.0.3/css/font-awesome.min.css" rel="stylesheet">
+		<link rel="stylesheet" type="text/css" href="/stylesheets/style.css" />
 		<script type="text/javascript">
 			if(navigator.appName == 'Microsoft Internet Explorer') {
 				if(navigator.userAgent.indexOf("MSIE 5.0") > 0 || navigator.userAgent.indexOf("MSIE 6.0") > 0 || navigator.userAgent.indexOf("MSIE 7.0") > 0) {
@@ -54,13 +33,9 @@
 		</script>
 	</head>
 
-	<body style="background-color: #FAFAFA;">
+	<body>
 		<div class="container container-fill">
-<<<<<<< HEAD
-			<!--link href="http://wechat.fangsuo.com/addons/fangsuo/assets/css/fangsuo_v2.css?v=17070301" rel="stylesheet"-->
-=======
 			<!--<link href="http://wechat.fangsuo.com/addons/fangsuo/assets/css/fangsuo_v2.css?v=17070301" rel="stylesheet">-->
->>>>>>> origin/master
 			<!--link href="http://wechat.fangsuo.net/addons/fangsuo/assets/css/fangsuo_v2.css" rel="stylesheet"-->
 
 			<style type="text/css">
@@ -108,14 +83,10 @@
 				
 				.list-01 li {
 					padding-left: 18px;
-<<<<<<< HEAD
-					/*background-image: url("http://wechat.fangsuo.com/addons/fangsuo/assets/images/ico-li-01.png");
-=======
 					/*background-image: url("http://wechat.fangsuo.com/addons/fangsuo/assets/images/ico-li-01.png");*/
->>>>>>> origin/master
 					background-repeat: no-repeat;
 					background-position: 1px 10px;
-					background-size: 9px auto;*/
+					background-size: 9px auto;
 				}
 				
 				.countDownClass {
@@ -147,10 +118,8 @@
 				}
 			</style>
 
-			<div class="mui-content mc-login" style="padding-bottom: 15px;">
-				<div class="avatar mui-text-center">
-					<h1 style="color:#1A1A1A;font-size:24px;text-align:center">会员中心<br><small style="color:#242424;font-size: 14px;">The&nbsp; Member&nbsp; Center</small></h1>
-				</div>
+			<div style="padding-bottom: 15px;">
+				<h1 style="color:#1A1A1A;font-size:24px;text-align:center;">会员中心<br><small style="color:#242424;font-size: 14px;">The&nbsp; Member&nbsp; Center</small></h1>
 				<div class="panles" style="height: 120px;">
 					<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="padding: 0;">
 						<div class="col-lg-9 col-md-9 col-sm-9 col-xs-9" style="height: 100px;">
@@ -207,7 +176,7 @@
 						success: function(res) {
 							console.log("res : " + res["status"]);
 							if(res['status'] != 1) {
-								return util.toast(res['message'], '', 'error');
+								return alert(res['message']);
 							} else {
 								// change to set time string
 								timestamp = res["remain"];
@@ -219,9 +188,9 @@
 						},
 						error: function(XMLHttpRequest, status) {
 							if(status == 'timeout') {
-								util.toast('请求超时，请稍后再试', '', 'error');
+								alert('请求超时，请稍后再试');
 							} else {
-								util.toast('请求失败，请稍后再试', '', 'error');
+								alert('请求失败，请稍后再试');
 							}
 						},
 						complete: function() {
