--- a/webServer/views/register.html
+++ b/webServer/views/register.html
@@ -78,6 +78,10 @@
 				<button class="common-btn-inner" onclick="confirmRegister()" style="background-color: #1A1A1A;border: 0;"><span class="common-btn-text">确认注册</span></button>
 			</div>
 
+			<div class="common-btn-div">
+				<button class="common-btn-inner" onclick="accountRecover()" style="background-color: #1A1A1A;border: 0;"><span class="common-btn-text">账号恢复</span></button>
+			</div>
+
 		</div>
 	</body>
 
@@ -178,6 +182,10 @@
 				}
 			}
 			sendRequest(signUp);
+		}
+
+		function accountRecover() {
+			window.location.href = "/users/recover";
 		}
 
 		function confirmSendCode(data) {
