fix recover bug

--- a/webServer/views/recover.html
+++ b/webServer/views/recover.html
@@ -31,7 +31,7 @@
 			function confirmRecover() {
 
 				var data = {
-					code: $('#phone').val()
+					phone: $('#phone').val()
 				};
 				if(data.code.trim().length != 0) {
 					active(data);
