--- a/webServer/views/register.html
+++ b/webServer/views/register.html
@@ -75,11 +75,11 @@
 			</div>
 
 			<div class="common-btn-div">
-				<button class="common-btn-inner" onclick="confirmRegister()" style="background-color: #1A1A1A;border: 0;"><span class="common-btn-text">确认注册</span></button>
+				<button class="common-btn-inner" onclick="confirmRegister()" style="background-color: #1A1A1A;border: 0;"><span class="common-btn-text">新会员注册</span></button>
 			</div>
 
 			<div class="common-btn-div">
-				<button class="common-btn-inner" onclick="accountRecover()" style="background-color: #1A1A1A;border: 0;"><span class="common-btn-text">账号恢复</span></button>
+				<button class="common-btn-inner" onclick="accountRecover()" style="background-color: #1A1A1A;border: 0;"><span class="common-btn-text">老会员服务</span></button>
 			</div>
 
 		</div>
